--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 Django==1.8.9
-Pillow==3.1.1
-PyJWT==1.4.0
 django-appconf==1.0.1
 django-geoposition==0.2.2
+django-model-utils==2.4
+django-notifications-hq==1.0
 httplib2==0.9.2
+jsonfield==1.0.3
 oauth2==1.9.0.post1
 oauthlib==1.0.3
+Pillow==3.1.1
+PyJWT==1.4.0
 python-openid==2.2.5
 python-social-auth==0.2.13
+pytz==2015.7
 requests==2.9.1
 requests-oauthlib==0.6.0
 six==1.10.0
-wsgiref==0.1.2
+wheel==0.26.0
