--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@ django_project/media
 django_project/scriptTemp.sql
 
 django_project/treasurePythonAnywhere2.db-journal
+
+django_project/help backup.csv
+
+django_project/treasure_school.csv
+
+django_project/treasure_tag.csv
+
+django_project/static/images/typographic_tragedy.png
+
+django_project/static/images/mixture_of_none.png
