--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,6 @@ django-appconf==1.0.1
 django-geoposition==0.2.2
 django-model-utils==2.4
 django-notifications-hq==1.0
-django-registration==2.0.4
-django-simple-captcha==0.5.1
 httplib2==0.9.2
 jsonfield==1.0.3
 oauth2==1.9.0.post1
@@ -17,3 +15,5 @@ pytz==2015.7
 requests==2.9.1
 requests-oauthlib==0.6.0
 six==1.10.0
+wheel==0.26.0
+django-simple-captcha==0.5.1
